--- a/app/src/main/res/layout/activity_row_owe.xml
+++ b/app/src/main/res/layout/activity_row_owe.xml
@@ -13,17 +13,20 @@
             android:id="@+id/idCustomerTextView"
             android:layout_width="0dp"
             android:textColor="#ff0000"
+            android:padding="5dp"
             android:text="ID"
             android:layout_height="wrap_content"
             android:layout_weight=".40"/>
         <TextView
             android:id="@+id/nameCustomerTextView"
+            android:padding="5dp"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight=".60"/>
     </LinearLayout>
     <LinearLayout
         android:id="@+id/LinearLayout2"
+        android:padding="5dp"
         app:layout_constraintTop_toBottomOf="@+id/LinearLayout1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -31,9 +34,11 @@
             android:layout_width="0dp"
             android:text="Nợ: "
             android:layout_height="wrap_content"
+            android:padding="5dp"
             android:layout_weight=".40"/>
         <TextView
             android:id="@+id/oweCustomerTextView"
+            android:padding="5dp"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight=".60"/>
